made the schedules dynamic with dummy data

--- a/workOutSchedule.html
+++ b/workOutSchedule.html
@@ -12,7 +12,7 @@
     <title>Document</title>
 </head>
 <body class="bg-[#FCFCFC] text-[#2C2B2B]">
-    <section class="flex flex-col pt-3 h-[92vh] gap-10 items-center overflow-auto ">
+    <section class="flex flex-col pt-3 h-[90vh] pb-5 gap-10 items-center overflow-auto ">
 
         <div class="flex flex-col gap-3 w-full p-4">
             <div class="flex justify-start relative w-full gap-16 items-center">
@@ -70,17 +70,7 @@
         <div class="relative w-full">
 
             
-            <div class="absolute w-full ">
-                <div class="p-4 absolute right-[1em] top-[65px] w-[50%] rounded-full h-2 flex justify-center items-center text-[white] bg-gradient-to-l from-[#D3A4F4] to-[#E9B1E0]">
-                    <p class="text-[12px]">Ab Workout, 7:30am</p>
-                </div>
-                   <div class="p-4 absolute right-[4em] top-[130px] w-[50%] rounded-full h-2 flex justify-center items-center text-[white] bg-gradient-to-l from-[#D3A4F4] to-[#E9B1E0]">
-                    <p class="text-[12px]">Upperbody Workout, 9am</p>
-                </div>
-                <div class="p-4 absolute right-[4em] top-[375px] w-[50%] rounded-full h-2 flex justify-center items-center text-[black] bg-[#F1F1F1]">
-                    <p class="text-[12px]">Lowerbody Workout, 3pm</p>
-                </div>
-            </div>
+           
             <div id="hour-6" class="p-2 px-4 w-full border-[#7F7F7F] border-b flex justify-start">
                 <p>06:00 AM</p>
                 <div class="left-[0.25em] current-time w-[75%] absolute h-[1px] bg-[#5883F7]" >
